--- a/index.html
+++ b/index.html
@@ -7,31 +7,52 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <div class="sidebar">
-        <h2>Menu</h2>
-        <ul>
+    <nav class="navbar">
+        <div class="nav-logo">Katarina</div>
+        <ul class="nav-links">
             <li><a href="#intro">About Me</a></li>
-            <li><a href="#project1">Project 1</a></li>
-            <li><a href="#project2">Project 2</a></li>
+            <li class="dropdown">
+                <a href="#projects" class="dropbtn">Projects</a>
+                <div class="dropdown-content">
+                    <a href="#project1">Project 1</a>
+                    <a href="#project2">Project 2</a>
+                </div>
+            </li>
         </ul>
-    </div>
+    </nav>
     <div class="main-content">
         <section id="intro">
             <h1>Hi, my name is Katarina</h1>
             <p>I am a passionate developer and designer. Welcome to my personal website where I showcase my projects and skills.</p>
         </section>
-        <section id="project1" class="project-section">
-            <h2>Project 1: Awesome App</h2>
-            <img src="images/project1.jpg" alt="Project 1" class="project-img">
-            <p>This is a cool app that solves real-world problems. It is built with love and attention to detail. Check it out to learn more!</p>
-            <a href="projects/project1.html" class="learn-more" target="_blank">Tap to learn more</a>
-        </section>
-        <section id="project2" class="project-section">
-            <h2>Project 2: Creative Website</h2>
-            <img src="images/project2.jpg" alt="Project 2" class="project-img">
-            <p>A creative website designed to inspire and engage users. It features modern design and smooth interactions. Discover the details!</p>
-            <a href="projects/project2.html" class="learn-more" target="_blank">Tap to learn more</a>
+        <section id="projects">
+            <section id="project1" class="project-section">
+                <h2>Project 1: Awesome App</h2>
+                <img src="images/project1.jpg" alt="Project 1" class="project-img">
+                <p>This is a cool app that solves real-world problems. It is built with love and attention to detail. Check it out to learn more!</p>
+                <a href="projects/project1.html" class="learn-more" target="_blank">Tap to learn more</a>
+            </section>
+            <section id="project2" class="project-section">
+                <h2>Project 2: Creative Website</h2>
+                <img src="images/project2.jpg" alt="Project 2" class="project-img">
+                <p>A creative website designed to inspire and engage users. It features modern design and smooth interactions. Discover the details!</p>
+                <a href="projects/project2.html" class="learn-more" target="_blank">Tap to learn more</a>
+            </section>
         </section>
     </div>
+    <script>
+    // Smooth scroll for anchor links
+    document.querySelectorAll('a[href^="#"]').forEach(anchor => {
+        anchor.addEventListener('click', function (e) {
+            const href = this.getAttribute('href');
+            if (href.length > 1 && document.querySelector(href)) {
+                e.preventDefault();
+                document.querySelector(href).scrollIntoView({
+                    behavior: 'smooth'
+                });
+            }
+        });
+    });
+    </script>
 </body>
 </html> 
