--- a/index.html
+++ b/index.html
@@ -1,58 +1,81 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Katarina's Portfolio</title>
-    <link rel="stylesheet" href="style.css">
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Katarina's Portfolio</title>
+  <link rel="stylesheet" href="style.css">
 </head>
 <body>
+  <header class="site-header">
     <nav class="navbar">
-        <div class="nav-logo">Katarina</div>
-        <ul class="nav-links">
-            <li><a href="#intro">About Me</a></li>
-            <li class="dropdown">
-                <a href="#projects" class="dropbtn">Projects</a>
-                <div class="dropdown-content">
-                    <a href="#project1">Project 1</a>
-                    <a href="#project2">Project 2</a>
-                </div>
-            </li>
-        </ul>
+      <div class="nav-logo">Katarina</div>
+      <ul class="nav-links">
+        <li><a href="#hero">Home</a></li>
+        <li><a href="#about">About</a></li>
+        <li class="dropdown">
+          <a href="#projects" class="dropbtn">Projects</a>
+          <div class="dropdown-content">
+            <a href="#project1">Project 1</a>
+            <a href="#project2">Project 2</a>
+          </div>
+        </li>
+        <li><a href="#contact">Contact</a></li>
+      </ul>
     </nav>
-    <div class="main-content">
-        <section id="intro">
-            <h1>Hi, my name is Katarina</h1>
-            <p>I am a passionate developer and designer. Welcome to my personal website where I showcase my projects and skills.</p>
-        </section>
-        <section id="projects">
-            <section id="project1" class="project-section">
-                <h2>Project 1: Awesome App</h2>
-                <img src="images/project1.jpg" alt="Project 1" class="project-img">
-                <p>This is a cool app that solves real-world problems. It is built with love and attention to detail. Check it out to learn more!</p>
-                <a href="projects/project1.html" class="learn-more" target="_blank">Tap to learn more</a>
-            </section>
-            <section id="project2" class="project-section">
-                <h2>Project 2: Creative Website</h2>
-                <img src="images/project2.jpg" alt="Project 2" class="project-img">
-                <p>A creative website designed to inspire and engage users. It features modern design and smooth interactions. Discover the details!</p>
-                <a href="projects/project2.html" class="learn-more" target="_blank">Tap to learn more</a>
-            </section>
-        </section>
+  </header>
+  <section id="hero" class="hero-section">
+    <div class="hero-content">
+      <h1>Hi, I'm Katarina</h1>
+      <p class="hero-subtitle">A passionate developer & designer</p>
+      <a href="#projects" class="hero-btn">View My Work</a>
     </div>
-    <script>
+  </section>
+  <section id="about" class="about-section">
+    <h2>About Me</h2>
+    <p>I am a professional developer and designer with a love for building beautiful, functional web experiences. Welcome to my portfolio!</p>
+  </section>
+  <section id="projects" class="projects-section">
+    <h2>Projects</h2>
+    <div class="projects-grid">
+      <div class="project-card" id="project1">
+        <img src="images/project1.jpg" alt="Project 1">
+        <div class="project-info">
+          <h3>Awesome App</h3>
+          <p>This is a cool app that solves real-world problems. Built with love and attention to detail. Check it out to learn more!</p>
+          <a href="projects/project1.html" class="learn-more" target="_blank">Tap to learn more</a>
+        </div>
+      </div>
+      <div class="project-card" id="project2">
+        <img src="images/project2.jpg" alt="Project 2">
+        <div class="project-info">
+          <h3>Creative Website</h3>
+          <p>A creative website designed to inspire and engage users. Features modern design and smooth interactions. Discover the details!</p>
+          <a href="projects/project2.html" class="learn-more" target="_blank">Tap to learn more</a>
+        </div>
+      </div>
+    </div>
+  </section>
+  <section id="contact" class="contact-section">
+    <h2>Contact</h2>
+    <p>Want to get in touch? Email me at <a href="mailto:katarina@email.com">katarina@email.com</a></p>
+  </section>
+  <footer class="site-footer">
+    <p>&copy; 2024 Katarina. All rights reserved.</p>
+  </footer>
+  <script>
     // Smooth scroll for anchor links
     document.querySelectorAll('a[href^="#"]').forEach(anchor => {
-        anchor.addEventListener('click', function (e) {
-            const href = this.getAttribute('href');
-            if (href.length > 1 && document.querySelector(href)) {
-                e.preventDefault();
-                document.querySelector(href).scrollIntoView({
-                    behavior: 'smooth'
-                });
-            }
-        });
+      anchor.addEventListener('click', function (e) {
+        const href = this.getAttribute('href');
+        if (href.length > 1 && document.querySelector(href)) {
+          e.preventDefault();
+          document.querySelector(href).scrollIntoView({
+            behavior: 'smooth'
+          });
+        }
+      });
     });
-    </script>
+  </script>
 </body>
 </html> 
