Changes to website design

--- a/index.html
+++ b/index.html
@@ -11,55 +11,76 @@
     <nav class="navbar">
       <div class="nav-logo">Katarina</div>
       <ul class="nav-links">
-        <li><a href="#hero">Home</a></li>
         <li><a href="#about">About</a></li>
         <li class="dropdown">
           <a href="#projects" class="dropbtn">Projects</a>
           <div class="dropdown-content">
             <a href="#project1">Project 1</a>
             <a href="#project2">Project 2</a>
+            <a href="#project3">Project 3</a>
+            <a href="#project4">Project 4</a>
+            <a href="#project5">Project 5</a>
           </div>
         </li>
         <li><a href="#contact">Contact</a></li>
       </ul>
     </nav>
   </header>
-  <section id="hero" class="hero-section">
-    <div class="hero-content">
-      <h1>Hi, I'm Katarina</h1>
-      <p class="hero-subtitle">A passionate developer & designer</p>
-      <a href="#projects" class="hero-btn">View My Work</a>
-    </div>
-  </section>
-  <section id="about" class="about-section">
-    <h2>About Me</h2>
-    <p>I am a professional developer and designer with a love for building beautiful, functional web experiences. Welcome to my portfolio!</p>
-  </section>
-  <section id="projects" class="projects-section">
-    <h2>Projects</h2>
-    <div class="projects-grid">
-      <div class="project-card" id="project1">
-        <img src="images/project1.jpg" alt="Project 1">
-        <div class="project-info">
-          <h3>Awesome App</h3>
-          <p>This is a cool app that solves real-world problems. Built with love and attention to detail. Check it out to learn more!</p>
-          <a href="projects/project1.html" class="learn-more" target="_blank">Tap to learn more</a>
+  <main class="main-centered">
+    <section id="about" class="about-section">
+      <h2>About Me</h2>
+      <p>I am a professional developer and designer with a love for building beautiful, functional web experiences. Welcome to my portfolio!</p>
+    </section>
+    <section id="projects" class="projects-section">
+      <h2>Projects</h2>
+      <div class="projects-grid">
+        <div class="project-card" id="project1">
+          <img src="images/project1.jpg" alt="Project 1">
+          <div class="project-info">
+            <h3>Awesome App</h3>
+            <p>This is a cool app that solves real-world problems. Built with love and attention to detail. Check it out to learn more!</p>
+            <a href="projects/project1.html" class="learn-more" target="_blank">Tap to learn more</a>
+          </div>
+        </div>
+        <div class="project-card" id="project2">
+          <img src="images/project2.jpg" alt="Project 2">
+          <div class="project-info">
+            <h3>Creative Website</h3>
+            <p>A creative website designed to inspire and engage users. Features modern design and smooth interactions. Discover the details!</p>
+            <a href="projects/project2.html" class="learn-more" target="_blank">Tap to learn more</a>
+          </div>
+        </div>
+        <div class="project-card" id="project3">
+          <img src="images/project3.jpg" alt="Project 3">
+          <div class="project-info">
+            <h3>Portfolio Builder</h3>
+            <p>A tool to help users create and customize their own portfolios easily. Fast, flexible, and user-friendly. Try it out!</p>
+            <a href="projects/project3.html" class="learn-more" target="_blank">Tap to learn more</a>
+          </div>
+        </div>
+        <div class="project-card" id="project4">
+          <img src="images/project4.jpg" alt="Project 4">
+          <div class="project-info">
+            <h3>Task Manager</h3>
+            <p>Organize your work and life with this intuitive task manager. Stay productive and never miss a deadline. Learn more!</p>
+            <a href="projects/project4.html" class="learn-more" target="_blank">Tap to learn more</a>
+          </div>
+        </div>
+        <div class="project-card" id="project5">
+          <img src="images/project5.jpg" alt="Project 5">
+          <div class="project-info">
+            <h3>Interactive Dashboard</h3>
+            <p>Visualize your data with beautiful, interactive dashboards. Customizable and real-time updates. Explore the features!</p>
+            <a href="projects/project5.html" class="learn-more" target="_blank">Tap to learn more</a>
+          </div>
         </div>
       </div>
-      <div class="project-card" id="project2">
-        <img src="images/project2.jpg" alt="Project 2">
-        <div class="project-info">
-          <h3>Creative Website</h3>
-          <p>A creative website designed to inspire and engage users. Features modern design and smooth interactions. Discover the details!</p>
-          <a href="projects/project2.html" class="learn-more" target="_blank">Tap to learn more</a>
-        </div>
-      </div>
-    </div>
-  </section>
-  <section id="contact" class="contact-section">
-    <h2>Contact</h2>
-    <p>Want to get in touch? Email me at <a href="mailto:katarina@email.com">katarina@email.com</a></p>
-  </section>
+    </section>
+    <section id="contact" class="contact-section">
+      <h2>Contact</h2>
+      <p>Want to get in touch? Email me at <a href="mailto:katarina@email.com">katarina@email.com</a></p>
+    </section>
+  </main>
   <footer class="site-footer">
     <p>&copy; 2024 Katarina. All rights reserved.</p>
   </footer>
