Changes to layout

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
   <header class="site-header">
     <nav class="navbar">
-      <div class="nav-logo">Katarina</div>
+      <div class="nav-logo">Katarina Duric</div>
       <ul class="nav-links">
         <li><a href="#about">About</a></li>
         <li class="dropdown">
@@ -26,7 +26,7 @@
       </ul>
     </nav>
   </header>
-  <main class="main-centered">
+  <main class="main-horizontal">
     <section id="about" class="about-section">
       <h2>About Me</h2>
       <p>I am a professional developer and designer with a love for building beautiful, functional web experiences. Welcome to my portfolio!</p>
@@ -78,11 +78,11 @@
     </section>
     <section id="contact" class="contact-section">
       <h2>Contact</h2>
-      <p>Want to get in touch? Email me at <a href="mailto:katarina@email.com">katarina@email.com</a></p>
+      <p>Want to get in touch? Email me at <a href="mailto:kd374@cornell.edu">kd374@cornell.edu</a></p>
     </section>
   </main>
   <footer class="site-footer">
-    <p>&copy; 2024 Katarina. All rights reserved.</p>
+    <p>&copy; 2025 Katarina Duric. All rights reserved.</p>
   </footer>
   <script>
     // Smooth scroll for anchor links
