changes of the layout

--- a/index.html
+++ b/index.html
@@ -26,9 +26,10 @@
       </ul>
     </nav>
   </header>
-  <main class="main-horizontal">
+  <main class="main-vertical">
     <section id="about" class="about-section">
       <h2>About Me</h2>
+      <img src="images/profile-placeholder.jpg" alt="Profile picture" class="profile-pic">
       <p>I am a professional developer and designer with a love for building beautiful, functional web experiences. Welcome to my portfolio!</p>
     </section>
     <section id="projects" class="projects-section">
