Update website layout, content, and images for latest portfolio version

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Katarina's Portfolio</title>
+  <title>Katarina Duric Portfolio</title>
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
@@ -29,8 +29,8 @@
   <main class="main-vertical">
     <section id="about" class="about-section">
       <h2>About Me</h2>
-      <img src="images/profile-placeholder.jpg" alt="Profile picture" class="profile-pic">
-      <p>I am a professional developer and designer with a love for building beautiful, functional web experiences. Welcome to my portfolio!</p>
+      <img src="images/katarina_profile_picture.png" alt="Profile picture" class="profile-pic">
+      <p>Hi! My name is Katarina Duric and I am a Master's student in Electrical and Computer Engineering at Cornell University. My interests lie in Digital and Analog VLSI Design, digital verification and RTL design, as well as hardware design. Below you can find some of my projects!</p>
     </section>
     <section id="projects" class="projects-section">
       <h2>Projects</h2>
