committing project 3 and 4

--- a/index.html
+++ b/index.html
@@ -44,8 +44,8 @@
             <button class="slide-btn right" onclick="plusSlides(1, 'project1-slideshow')">&#10095;</button>
           </div>
           <div class="project-info">
-            <h3>Awesome App</h3>
-            <p>This is a cool app that solves real-world problems. Built with love and attention to detail. Check it out to learn more!</p>
+            <h3>Delay-Locked Loop for High-Speed Photonic Links</h3>
+            <p>Designed and implemented a Delay-Locked Loop (DLL) for high-speed photonic links to enable precise clock-data recovery in massively parallel WDM systems. Contributed to a broader effort optimizing photonic interconnects for mmWave transceivers, focusing on energy-efficient signal distribution and synchronization in beamforming architectures.</p>
             <a href="projects/project1.html" class="learn-more" target="_blank">Tap to learn more</a>
           </div>
         </div>
@@ -57,20 +57,25 @@
             <a href="projects/project2.html" class="learn-more" target="_blank">Tap to learn more</a>
           </div>
         </div>
+      <!-- pROJECT 3-->
         <div class="project-card" id="project3">
-          <img src="images/project3.jpg" alt="Project 3">
+          <a href="https://example.com" target="_blank">
+            <img src="images/project3.jpg" alt="Project 3">
+          </a>
           <div class="project-info">
-            <h3>Portfolio Builder</h3>
+            <a href="https://example.com" target="_blank" style="text-decoration:none;"><h3>Portfolio Builder</h3></a>
             <p>A tool to help users create and customize their own portfolios easily. Fast, flexible, and user-friendly. Try it out!</p>
-            <a href="projects/project3.html" class="learn-more" target="_blank">Tap to learn more</a>
+            <a href="https://example.com" class="learn-more" target="_blank">Tap to learn more</a>
           </div>
         </div>
         <div class="project-card" id="project4">
-          <img src="images/project4.jpg" alt="Project 4">
+          <a href="https://example.com" target="_blank">
+            <img src="images/project4.jpg" alt="Project 4">
+          </a>
           <div class="project-info">
-            <h3>Task Manager</h3>
+            <a href="https://example.com" target="_blank" style="text-decoration:none;"><h3>Task Manager</h3></a>
             <p>Organize your work and life with this intuitive task manager. Stay productive and never miss a deadline. Learn more!</p>
-            <a href="projects/project4.html" class="learn-more" target="_blank">Tap to learn more</a>
+            <a href="https://example.com" class="learn-more" target="_blank">Tap to learn more</a>
           </div>
         </div>
         <div class="project-card" id="project5">
