--- a/index.html
+++ b/index.html
@@ -46,7 +46,6 @@
           <div class="project-info">
             <h3>Delay-Locked Loop for High-Speed Photonic Links</h3>
             <p>Designed and implemented a Delay-Locked Loop (DLL) for high-speed photonic links to enable precise clock-data recovery in massively parallel WDM systems. Contributed to a broader effort optimizing photonic interconnects for mmWave transceivers, focusing on energy-efficient signal distribution and synchronization in beamforming architectures.</p>
-            <a href="projects/project1.html" class="learn-more" target="_blank">Tap to learn more</a>
           </div>
         </div>
         <div class="project-card" id="project2">
@@ -59,7 +58,7 @@
         </div>
       <!-- pROJECT 3-->
         <div class="project-card" id="project3">
-          <a href="https://going-to-insertlink-here" target="_blank">
+          <a href=https://kd374.github.io/ECE5160/" target="_blank">
             <div class="slideshow-container" id="project3-slideshow">
               <img class="slide" src="images/project3_1.png" alt="Project 3 Slide 1" style="display:block;">
               <img class="slide" src="images/project3_2.png" alt="Project 3 Slide 2" style="display:none;">
@@ -69,9 +68,9 @@
             </div>
           </a>
           <div class="project-info">
-            <a href="https://going-to-insertlink-here" target="_blank" style="text-decoration:none;"><h3>Dynamic Fast Robot</h3></a>
+            <a href="https://kd374.github.io/ECE5160/" target="_blank" style="text-decoration:none;"><h3>Dynamic Fast Robot</h3></a>
             <p>Designed a fast autonomous robot implementing software and firmware which enables time of flight sensing, closed-loop PID/orientation control, Kalman filtering, Bayes filtering, mapping, localization, and path planning</p>
-            <a href="https://going-to-insertlink-here" class="learn-more" target="_blank">Tap to learn more</a>
+            <a href="https://kd374.github.io/ECE5160/" class="learn-more" target="_blank">Tap to learn more</a>
           </div>
         </div>
         <div class="project-card" id="project4">
