--- a/index.html
+++ b/index.html
@@ -73,14 +73,28 @@
             <a href="https://kd374.github.io/ECE5160/" class="learn-more" target="_blank">Tap to learn more</a>
           </div>
         </div>
+        <!-- PROJECT 4-->
         <div class="project-card" id="project4">
           <a href="https://example.com" target="_blank">
-            <img src="images/project4.jpg" alt="Project 4">
+            <div class="slideshow-container" id="project4-slideshow">
+              <img class="slide" src="images/project4_1.png" alt="Project 4 Slide 1" style="display:block;">
+              <img class="slide" src="images/project4_2.png" alt="Project 4 Slide 2" style="display:none;">
+              <img class="slide" src="images/project4_3.png" alt="Project 4 Slide 3" style="display:none;">
+              <img class="slide" src="images/project4_4.png" alt="Project 4 Slide 4" style="display:none;">
+              <button class="slide-btn left" onclick="plusSlides(-1, 'project4-slideshow'); event.stopPropagation();">&#10094;</button>
+              <button class="slide-btn right" onclick="plusSlides(1, 'project4-slideshow'); event.stopPropagation();">&#10095;</button>
+            </div>
           </a>
           <div class="project-info">
             <a href="https://example.com" target="_blank" style="text-decoration:none;"><h3>Task Manager</h3></a>
             <p>Organize your work and life with this intuitive task manager. Stay productive and never miss a deadline. Learn more!</p>
-            <a href="https://example.com" class="learn-more" target="_blank">Tap to learn more</a>
+            <a href="https://example.com" class="learn-more" target="_blank">Click here to the project website</a>
+            <div class="video-demo" style="margin-top:18px;">
+              <video width="100%" height="320" controls>
+                <source src="images/project4_demo.mp4" type="video/mp4">
+                Your browser does not support the video tag.
+              </video>
+            </div>
           </div>
         </div>
         <div class="project-card" id="project5">
