--- a/index.html
+++ b/index.html
@@ -37,9 +37,11 @@
       <div class="projects-grid">
         <div class="project-card" id="project1">
           <div class="slideshow-container" id="project1-slideshow">
-            <img class="slide" src="images/project1_1.png" alt="Project 1 Slide 1" style="display:block;">
-            <img class="slide" src="images/project1_2.png" alt="Project 1 Slide 2" style="display:none;">
-            <img class="slide" src="images/project1_3.png" alt="Project 1 Slide 3" style="display:none;">
+            <a href="projects/project1.html" target="_blank">
+              <img class="slide" src="images/project1_1.png" alt="Project 1 Slide 1" style="display:block;">
+              <img class="slide" src="images/project1_2.png" alt="Project 1 Slide 2" style="display:none;">
+              <img class="slide" src="images/project1_3.png" alt="Project 1 Slide 3" style="display:none;">
+            </a>
             <button class="slide-btn left" onclick="plusSlides(-1, 'project1-slideshow')">&#10094;</button>
             <button class="slide-btn right" onclick="plusSlides(1, 'project1-slideshow')">&#10095;</button>
           </div>
@@ -69,26 +71,26 @@
           </a>
           <div class="project-info">
             <a href="https://kd374.github.io/ECE5160/" target="_blank" style="text-decoration:none;"><h3>Dynamic Fast Robot</h3></a>
-            <p>Designed a fast autonomous robot implementing software and firmware which enables time of flight sensing, closed-loop PID/orientation control, Kalman filtering, Bayes filtering, mapping, localization, and path planning</p>
+            <p>Designed a fast autonomous robot implementing software and firmware which enables time of flight sensing, closed-loop PID/orientation control, Kalman filtering, Bayes filtering, mapping, localization, and path planning.</p>
             <a href="https://kd374.github.io/ECE5160/" class="learn-more" target="_blank">Tap to learn more</a>
           </div>
         </div>
         <!-- PROJECT 4-->
         <div class="project-card" id="project4">
-          <a href="https://example.com" target="_blank">
-            <div class="slideshow-container" id="project4-slideshow">
+          <div class="slideshow-container" id="project4-slideshow">
+            <a href="https://ece4760.github.io/Projects/Spring2025/pis7_kd374_gpm58/index.html" target="_blank">
               <img class="slide" src="images/project4_1.png" alt="Project 4 Slide 1" style="display:block;">
               <img class="slide" src="images/project4_2.png" alt="Project 4 Slide 2" style="display:none;">
               <img class="slide" src="images/project4_3.png" alt="Project 4 Slide 3" style="display:none;">
               <img class="slide" src="images/project4_4.png" alt="Project 4 Slide 4" style="display:none;">
-              <button class="slide-btn left" onclick="plusSlides(-1, 'project4-slideshow'); event.stopPropagation();">&#10094;</button>
-              <button class="slide-btn right" onclick="plusSlides(1, 'project4-slideshow'); event.stopPropagation();">&#10095;</button>
-            </div>
-          </a>
+            </a>
+            <button class="slide-btn left" onclick="plusSlides(-1, 'project4-slideshow')">&#10094;</button>
+            <button class="slide-btn right" onclick="plusSlides(1, 'project4-slideshow')">&#10095;</button>
+          </div>
           <div class="project-info">
-            <a href="https://example.com" target="_blank" style="text-decoration:none;"><h3>Task Manager</h3></a>
+            <a href="https://ece4760.github.io/Projects/Spring2025/pis7_kd374_gpm58/index.html" target="_blank" style="text-decoration:none;"><h3>Task Manager</h3></a>
             <p>Organize your work and life with this intuitive task manager. Stay productive and never miss a deadline. Learn more!</p>
-            <a href="https://example.com" class="learn-more" target="_blank">Click here to the project website</a>
+            <a href="https://ece4760.github.io/Projects/Spring2025/pis7_kd374_gpm58/index.html" class="learn-more" target="_blank">Click here to the project website</a>
             <div class="video-demo" style="margin-top:18px;">
               <video width="100%" height="320" controls>
                 <source src="images/project4_demo.mp4" type="video/mp4">
