--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
             <button class="slide-btn right" onclick="plusSlides(1, 'project1-slideshow')">&#10095;</button>
           </div>
           <div class="project-info">
-            <h3>Delay-Locked Loop for High-Speed Photonic Links</h3>
+            <h3>Delay-Locked Loop for High-Speed Photonic Links (In Progress)</h3>
             <p>Designed and implemented a Delay-Locked Loop (DLL) for high-speed photonic links to enable precise clock-data recovery in massively parallel WDM systems. Contributed to a broader effort optimizing photonic interconnects for mmWave transceivers, focusing on energy-efficient signal distribution and synchronization in beamforming architectures.</p>
           </div>
         </div>
@@ -78,24 +78,22 @@
         <!-- PROJECT 4-->
         <div class="project-card" id="project4">
           <div class="slideshow-container" id="project4-slideshow">
-            <a href="https://ece4760.github.io/Projects/Spring2025/pis7_kd374_gpm58/index.html" target="_blank">
+            <a href="https://project-link" target="_blank">
               <img class="slide" src="images/project4_1.png" alt="Project 4 Slide 1" style="display:block;">
-              <img class="slide" src="images/project4_2.png" alt="Project 4 Slide 2" style="display:none;">
-              <img class="slide" src="images/project4_3.png" alt="Project 4 Slide 3" style="display:none;">
-              <img class="slide" src="images/project4_4.png" alt="Project 4 Slide 4" style="display:none;">
+              <img class="slide" src="images/project4_4.png" alt="Project 4 Slide 2" style="display:none;">
+              <img class="slide" src="images/project4_2.png" alt="Project 4 Slide 3" style="display:none;">
+              <img class="slide" src="images/project4_3.png" alt="Project 4 Slide 4" style="display:none;">
+              <img class="slide" src="images/project4_5.png" alt="Project 4 Slide 5" style="display:none;">
             </a>
             <button class="slide-btn left" onclick="plusSlides(-1, 'project4-slideshow')">&#10094;</button>
             <button class="slide-btn right" onclick="plusSlides(1, 'project4-slideshow')">&#10095;</button>
           </div>
           <div class="project-info">
-            <a href="https://ece4760.github.io/Projects/Spring2025/pis7_kd374_gpm58/index.html" target="_blank" style="text-decoration:none;"><h3>Task Manager</h3></a>
-            <p>Organize your work and life with this intuitive task manager. Stay productive and never miss a deadline. Learn more!</p>
-            <a href="https://ece4760.github.io/Projects/Spring2025/pis7_kd374_gpm58/index.html" class="learn-more" target="_blank">Click here to the project website</a>
+            <a href="https://project-link" target="_blank" style="text-decoration:none;"><h3>Raspberry Pi DIY Smartwatch</h3></a>
+            <p>The aim of this project was to create a custom smartwatch using a Raspberry Pi Pico W because of its great functionalities, while maintaining a simple and compact design embodying industry standard smartwatches and their common features.</p>
+            <a href="https://project-link" class="learn-more" target="_blank">Tap to view the project website</a>
             <div class="video-demo" style="margin-top:18px;">
-              <video width="100%" height="320" controls>
-                <source src="images/project4_demo.mp4" type="video/mp4">
-                Your browser does not support the video tag.
-              </video>
+              <iframe width="100%" height="320" src="https://www.youtube.com/embed/u0ErQuF8XQI" title="Demo Video" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
             </div>
           </div>
         </div>
