--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
       <div class="projects-grid">
         <div class="project-card" id="project1">
           <div class="slideshow-container" id="project1-slideshow">
-            <a href="projects/project1.html" target="_blank">
+            <!-- <a href="projects/project1.html" target="_blank"> -->
               <img class="slide" src="images/project1_1.png" alt="Project 1 Slide 1" style="display:block;">
               <img class="slide" src="images/project1_2.png" alt="Project 1 Slide 2" style="display:none;">
               <img class="slide" src="images/project1_3.png" alt="Project 1 Slide 3" style="display:none;">
@@ -60,15 +60,13 @@
         </div>
       <!-- pROJECT 3-->
         <div class="project-card" id="project3">
-          <a href=https://kd374.github.io/ECE5160/" target="_blank">
-            <div class="slideshow-container" id="project3-slideshow">
-              <img class="slide" src="images/project3_1.png" alt="Project 3 Slide 1" style="display:block;">
-              <img class="slide" src="images/project3_2.png" alt="Project 3 Slide 2" style="display:none;">
-              <img class="slide" src="images/project3_3.png" alt="Project 3 Slide 3" style="display:none;">
-              <button class="slide-btn left" onclick="plusSlides(-1, 'project3-slideshow'); event.stopPropagation();">&#10094;</button>
-              <button class="slide-btn right" onclick="plusSlides(1, 'project3-slideshow'); event.stopPropagation();">&#10095;</button>
-            </div>
-          </a>
+          <div class="slideshow-container" id="project3-slideshow">
+            <img class="slide" src="images/project3_1.png" alt="Project 3 Slide 1" style="display:block;">
+            <img class="slide" src="images/project3_2.png" alt="Project 3 Slide 2" style="display:none;">
+            <img class="slide" src="images/project3_3.png" alt="Project 3 Slide 3" style="display:none;">
+            <button class="slide-btn left" onclick="plusSlides(-1, 'project3-slideshow')">&#10094;</button>
+            <button class="slide-btn right" onclick="plusSlides(1, 'project3-slideshow')">&#10095;</button>
+          </div>
           <div class="project-info">
             <a href="https://kd374.github.io/ECE5160/" target="_blank" style="text-decoration:none;"><h3>Dynamic Fast Robot</h3></a>
             <p>Designed a fast autonomous robot implementing software and firmware which enables time of flight sensing, closed-loop PID/orientation control, Kalman filtering, Bayes filtering, mapping, localization, and path planning.</p>
