--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
         <!-- PROJECT 4-->
         <div class="project-card" id="project4">
           <div class="slideshow-container" id="project4-slideshow">
-            <a href="https://project-link" target="_blank">
+            <a href="https://ece4760.github.io/Projects/Spring2025/pis7_kd374_gpm58/index.html" target="_blank">
               <img class="slide" src="images/project4_1.png" alt="Project 4 Slide 1" style="display:block;">
               <img class="slide" src="images/project4_4.png" alt="Project 4 Slide 2" style="display:none;">
               <img class="slide" src="images/project4_2.png" alt="Project 4 Slide 3" style="display:none;">
@@ -87,12 +87,12 @@
             <button class="slide-btn right" onclick="plusSlides(1, 'project4-slideshow')">&#10095;</button>
           </div>
           <div class="project-info">
-            <a href="https://project-link" target="_blank" style="text-decoration:none;"><h3>Raspberry Pi DIY Smartwatch</h3></a>
+            <a href="https://ece4760.github.io/Projects/Spring2025/pis7_kd374_gpm58/index.html" target="_blank" style="text-decoration:none;"><h3>Raspberry Pi DIY Smartwatch</h3></a>
             <p>The aim of this project was to create a custom smartwatch using a Raspberry Pi Pico W because of its great functionalities, while maintaining a simple and compact design embodying industry standard smartwatches and their common features.</p>
-            <a href="https://project-link" class="learn-more" target="_blank">Tap to view the project website</a>
             <div class="video-demo" style="margin-top:18px;">
               <iframe width="100%" height="320" src="https://www.youtube.com/embed/u0ErQuF8XQI" title="Demo Video" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
             </div>
+            <a href="https://ece4760.github.io/Projects/Spring2025/pis7_kd374_gpm58/index.html" class="learn-more" target="_blank">Tap to View the Project Website</a>
           </div>
         </div>
         <div class="project-card" id="project5">
