--- a/index.html
+++ b/index.html
@@ -34,8 +34,15 @@
     </section>
     <section id="projects" class="projects-section">
       <h2>Projects</h2>
+      <!-- PROJECT 1-->
       <div class="projects-grid">
         <div class="project-card" id="project1">
+          <style>
+            #project1 .slide {
+              --slide-width: 900px;
+              --slide-height: 900px;
+            }
+          </style>
           <div class="slideshow-container" id="project1-slideshow">
             <!-- <a href="projects/project1.html" target="_blank"> -->
               <img class="slide" src="images/project1_1.png" alt="Project 1 Slide 1" style="display:block;">
@@ -50,6 +57,7 @@
             <p>Designed and implemented a Delay-Locked Loop (DLL) for high-speed photonic links to enable precise clock-data recovery in massively parallel WDM systems. Contributed to a broader effort optimizing photonic interconnects for mmWave transceivers, focusing on energy-efficient signal distribution and synchronization in beamforming architectures.</p>
           </div>
         </div>
+        <!-- PROJECT 2-->
         <div class="project-card" id="project2">
           <img src="images/project2.jpg" alt="Project 2">
           <div class="project-info">
@@ -58,8 +66,14 @@
             <a href="projects/project2.html" class="learn-more" target="_blank">Tap to learn more</a>
           </div>
         </div>
-      <!-- pROJECT 3-->
+      <!-- PROJECT 3-->
         <div class="project-card" id="project3">
+          <style>
+            #project3 .slide {
+              --slide-width: 800px;
+              --slide-height: 500px;
+            }
+          </style>
           <div class="slideshow-container" id="project3-slideshow">
             <img class="slide" src="images/project3_1.png" alt="Project 3 Slide 1" style="display:block;">
             <img class="slide" src="images/project3_2.png" alt="Project 3 Slide 2" style="display:none;">
@@ -75,6 +89,12 @@
         </div>
         <!-- PROJECT 4-->
         <div class="project-card" id="project4">
+          <style>
+            #project4 .slide {
+              --slide-width: 1000px;
+              --slide-height: 700px;
+            }
+          </style>
           <div class="slideshow-container" id="project4-slideshow">
             <a href="https://ece4760.github.io/Projects/Spring2025/pis7_kd374_gpm58/index.html" target="_blank">
               <img class="slide" src="images/project4_1.png" alt="Project 4 Slide 1" style="display:block;">
