--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
           <style>
             #project1 .slide {
               --slide-width: 900px;
-              --slide-height: 900px;
+              --slide-height: 1100px;
             }
           </style>
           <div class="slideshow-container" id="project1-slideshow">
@@ -112,7 +112,7 @@
             <div class="video-demo" style="margin-top:18px;">
               <iframe width="100%" height="320" src="https://www.youtube.com/embed/u0ErQuF8XQI" title="Demo Video" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
             </div>
-            <a href="https://ece4760.github.io/Projects/Spring2025/pis7_kd374_gpm58/index.html" class="learn-more" target="_blank">Tap to View the Project Website</a>
+            <a href="https://ece4760.github.io/Projects/Spring2025/pis7_kd374_gpm58/index.html" class="learn-more" target="_blank">Tap to view Project Website</a>
           </div>
         </div>
         <div class="project-card" id="project5">
@@ -127,7 +127,7 @@
     </section>
     <section id="contact" class="contact-section">
       <h2>Contact</h2>
-      <p>Want to get in touch? Email me at <a href="mailto:kd374@cornell.edu">kd374@cornell.edu</a></p>
+      <p>In case you have questions, feel free to reach out at <a href="mailto:kd374@cornell.edu">kd374@cornell.edu</a></p>
     </section>
   </main>
   <footer class="site-footer">
