--- a/index.html
+++ b/index.html
@@ -90,9 +90,17 @@
         <!-- PROJECT 4-->
         <div class="project-card" id="project4">
           <style>
+            #project4 {
+              max-width: 2800px;
+              width: 100%;
+              margin: 0 auto;
+            }
+            #project4 .slideshow-container {
+              max-width: 2400px;
+            }
             #project4 .slide {
-              --slide-width: 2000px;
-              --slide-height: 900px;
+              --slide-width: 2400px;
+              --slide-height: 1800px;
             }
           </style>
           <div class="slideshow-container" id="project4-slideshow">
@@ -110,7 +118,7 @@
             <a href="https://ece4760.github.io/Projects/Spring2025/pis7_kd374_gpm58/index.html" target="_blank" style="text-decoration:none;"><h3>Raspberry Pi DIY Smartwatch</h3></a>
             <p>The aim of this project was to create a custom smartwatch using a Raspberry Pi Pico W because of its great functionalities, while maintaining a simple and compact design embodying industry standard smartwatches and their common features.</p>
             <div class="video-demo" style="margin-top:18px;">
-              <iframe width="100%" height="320" src="https://www.youtube.com/embed/u0ErQuF8XQI" title="Demo Video" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+              <iframe width="120%" height="320" src="https://www.youtube.com/embed/u0ErQuF8XQI" title="Demo Video" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
             </div>
             <a href="https://ece4760.github.io/Projects/Spring2025/pis7_kd374_gpm58/index.html" class="learn-more" target="_blank">Tap to view Project Website</a>
           </div>
