--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
           <div class="project-info">
             <a href="https://kd374.github.io/ECE5160/" target="_blank" style="text-decoration:none;"><h3>Dynamic Fast Robot</h3></a>
             <p>Designed a fast autonomous robot implementing software and firmware which enables time of flight sensing, closed-loop PID/orientation control, Kalman filtering, Bayes filtering, mapping, localization, and path planning.</p>
-            <a href="https://kd374.github.io/ECE5160/" class="learn-more" target="_blank">Tap to learn more</a>
+            <a href="https://kd374.github.io/ECE5160/" class="learn-more" target="_blank">Tap to view Project Website</a>
           </div>
         </div>
         <!-- PROJECT 4-->
@@ -111,12 +111,20 @@
             <a href="https://ece4760.github.io/Projects/Spring2025/pis7_kd374_gpm58/index.html" class="learn-more" target="_blank">Tap to view Project Website</a>
           </div>
         </div>
+        <!-- PROJECT 5-->
         <div class="project-card" id="project5">
-          <img src="images/project5.jpg" alt="Project 5">
+          <style>
+            #project5 .slide {
+              --slide-width: 900px;
+              --slide-height: 700px;
+            }
+          </style>
+          <div class="slideshow-container" id="project5-slideshow">
+            <img class="slide" src="images/project5_1.png" alt="Project 5 Slide 1" style="display:block;">
+          </div>
           <div class="project-info">
-            <h3>Interactive Dashboard</h3>
-            <p>Visualize your data with beautiful, interactive dashboards. Customizable and real-time updates. Explore the features!</p>
-            <a href="projects/project5.html" class="learn-more" target="_blank">Tap to learn more</a>
+            <h3>Tracking Vehicles in Real-Time</h3>
+            <p>Worked with a local city NGO to develop a system which collects traffic data to inform environmental data analysis. Leveraged LoRaWAN technology to transmit data in real time, and computer vision to track trucks.</p>
           </div>
         </div>
       </div>
