--- a/index.html
+++ b/index.html
@@ -15,10 +15,10 @@
         <li class="dropdown">
           <a href="#projects" class="dropbtn">Projects</a>
           <div class="dropdown-content">
-            <a href="#project1">Project 1</a>
-            <a href="#project3">Project 3</a>
-            <a href="#project4">Project 4</a>
-            <a href="#project5">Project 5</a>
+            <a href="#project1">DLL for High-Speed Photonic Links</a>
+            <a href="#project3">Dynamic Fast Robot</a>
+            <a href="#project4">Raspberry Pi DIY Smartwatch</a>
+            <a href="#project5">Tracking Vehicles in Real-Time</a>
           </div>
         </li>
         <li><a href="#contact">Contact</a></li>
@@ -58,8 +58,8 @@
         <div class="project-card" id="project3">
           <style>
             #project3 .slide {
-              --slide-width: 400px;
-              --slide-height: 900px;
+              --slide-width: 1200px;
+              --slide-height: 1200px;
             }
           </style>
           <div class="slideshow-container" id="project3-slideshow">
