--- a/index.html
+++ b/index.html
@@ -35,33 +35,22 @@
       <h2>Projects</h2>
       <!-- PROJECT 1-->
       <div class="projects-grid">
-        <div class="project-card" id="project1">
-          <style>
-            #project1 .slide {
-              --slide-width: 1350px;
-              --slide-height: 1500px;
-            }
-          </style>
-          <div class="slideshow-container" id="project1-slideshow">
-            <img class="slide" src="images/project1_1.png" alt="Project 1 Slide 1" style="display:block;">
-            <img class="slide" src="images/project1_2.png" alt="Project 1 Slide 2" style="display:none;">
-            <img class="slide" src="images/project1_3.png" alt="Project 1 Slide 3" style="display:none;">
-            <button class="slide-btn left" onclick="plusSlides(-1, 'project1-slideshow')">&#10094;</button>
-            <button class="slide-btn right" onclick="plusSlides(1, 'project1-slideshow')">&#10095;</button>
-          </div>
+          <div class="project-card" id="project1" style="--slide-width: 380px; --slide-height: 250px;">
+            <div class="slideshow-container" id="project1-slideshow">
+              <img class="slide" src="images/project1_1.png" alt="Project 1 Slide 1" style="display:block;">
+              <img class="slide" src="images/project1_2.png" alt="Project 1 Slide 2" style="display:none;">
+              <img class="slide" src="images/project1_3.png" alt="Project 1 Slide 3" style="display:none;">
+              <button class="slide-btn left" onclick="plusSlides(-1, 'project1-slideshow')">&#10094;</button>
+              <button class="slide-btn right" onclick="plusSlides(1, 'project1-slideshow')">&#10095;</button>
+            </div>
           <div class="project-info">
             <h3>Delay-Locked Loop for High-Speed Photonic Links (In Progress)</h3>
             <p>Designed and implemented a Delay-Locked Loop (DLL) for high-speed photonic links to enable precise clock-data recovery in massively parallel WDM systems. Contributed to a broader effort optimizing photonic interconnects for mmWave transceivers, focusing on energy-efficient signal distribution and synchronization in beamforming architectures.</p>
           </div>
+          </div>
         </div>
         <!-- PROJECT 3-->
-        <div class="project-card" id="project3">
-          <style>
-            #project3 .slide {
-              --slide-width: 1200px;
-              --slide-height: 1200px;
-            }
-          </style>
+          <div class="project-card" id="project3" style="--slide-width: 300px; --slide-height: 300px;">
           <div class="slideshow-container" id="project3-slideshow">
             <img class="slide" src="images/project3_1.png" alt="Project 3 Slide 1" style="display:block;">
             <img class="slide" src="images/project3_2.png" alt="Project 3 Slide 2" style="display:none;">
@@ -76,21 +65,7 @@
           </div>
         </div>
         <!-- PROJECT 4-->
-        <div class="project-card" id="project4">
-          <style>
-            #project4 .slide {
-              --slide-width: 2400px;
-              --slide-height: 1800px;
-            }
-            #project4 {
-              max-width: 2800px;
-              width: 100%;
-              margin: 0 auto;
-            }
-            #project4 .slideshow-container {
-              max-width: 2400px;
-            }
-          </style>
+          <div class="project-card" id="project4" style="--slide-width: 450px; --slide-height: 300px;">
           <div class="slideshow-container" id="project4-slideshow">
             <a href="https://ece4760.github.io/Projects/Spring2025/pis7_kd374_gpm58/index.html" target="_blank">
               <img class="slide" src="images/project4_1.png" alt="Project 4 Slide 1" style="display:block;">
