--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
     <section id="about" class="about-section">
       <h2>About Me</h2>
       <img src="images/katarina_profile_picture.png" alt="Profile picture" class="profile-pic">
-      <p>Hi! My name is Katarina Duric and I am a Master's student in Electrical and Computer Engineering at Cornell University. My interests lie in Digital and Analog VLSI Design, digital verification and RTL design, as well as hardware design. Below you can find some of my projects!</p>
+      <p>Hello! My name is Katarina Duric and I am a Master's student in Electrical and Computer Engineering at Cornell University. My interests lie in Digital and Analog VLSI Design, digital verification and RTL design, as well as hardware design. Below you can find some of my projects!</p>
     </section>
     <section id="projects" class="projects-section">
       <h2>Projects</h2>
@@ -51,19 +51,18 @@
         </div>
         <!-- PROJECT 3-->
           <div class="project-card" id="project3" style="--slide-width: 300px; --slide-height: 300px;">
-          <div class="slideshow-container" id="project3-slideshow">
-            <img class="slide" src="images/project3_1.png" alt="Project 3 Slide 1" style="display:block;">
-            <img class="slide" src="images/project3_2.png" alt="Project 3 Slide 2" style="display:none;">
-            <img class="slide" src="images/project3_3.png" alt="Project 3 Slide 3" style="display:none;">
-            <button class="slide-btn left" onclick="plusSlides(-1, 'project3-slideshow')">&#10094;</button>
-            <button class="slide-btn right" onclick="plusSlides(1, 'project3-slideshow')">&#10095;</button>
+            <div class="slideshow-container" id="project3-slideshow">
+              <img class="slide" src="images/project3_2.png" alt="Project 3 Slide 2" style="display:block;">
+              <img class="slide" src="images/project3_3.png" alt="Project 3 Slide 3" style="display:none;">
+              <button class="slide-btn left" onclick="plusSlides(-1, 'project3-slideshow')">&#10094;</button>
+              <button class="slide-btn right" onclick="plusSlides(1, 'project3-slideshow')">&#10095;</button>
+            </div>
+            <div class="project-info">
+              <a href="https://kd374.github.io/ECE5160/" target="_blank" style="text-decoration:none;"><h3>Dynamic Fast Robot</h3></a>
+              <p>Designed a fast autonomous robot implementing software and firmware which enables time of flight sensing, closed-loop PID/orientation control, Kalman filtering, Bayes filtering, mapping, localization, and path planning.</p>
+              <a href="https://kd374.github.io/ECE5160/" class="learn-more" target="_blank">Tap to view Project Website</a>
+            </div>
           </div>
-          <div class="project-info">
-            <a href="https://kd374.github.io/ECE5160/" target="_blank" style="text-decoration:none;"><h3>Dynamic Fast Robot</h3></a>
-            <p>Designed a fast autonomous robot implementing software and firmware which enables time of flight sensing, closed-loop PID/orientation control, Kalman filtering, Bayes filtering, mapping, localization, and path planning.</p>
-            <a href="https://kd374.github.io/ECE5160/" class="learn-more" target="_blank">Tap to view Project Website</a>
-          </div>
-        </div>
         <!-- PROJECT 4-->
           <div class="project-card" id="project4" style="--slide-width: 450px; --slide-height: 300px;">
           <div class="slideshow-container" id="project4-slideshow">
