--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
         <li class="dropdown">
           <a href="#projects" class="dropbtn">Projects</a>
           <div class="dropdown-content">
-            <a href="#project1">DLL for High-Speed Photonic Links</a>
+            <!-- <a href="#project1">DLL for High-Speed Photonic Links</a> -->
             <a href="#project3">Dynamic Fast Robot</a>
             <a href="#project4">Raspberry Pi DIY Smartwatch</a>
             <a href="#project5">Tracking Vehicles in Real-Time</a>
@@ -35,7 +35,7 @@
       <h2>Projects</h2>
       <!-- PROJECT 1-->
       <div class="projects-grid">
-          <div class="project-card" id="project1" style="--slide-width: 380px; --slide-height: 250px;">
+          <!-- <div class="project-card" id="project1" style="--slide-width: 380px; --slide-height: 250px;">
             <div class="slideshow-container" id="project1-slideshow">
               <img class="slide" src="images/project1_1.png" alt="Project 1 Slide 1" style="display:block;">
               <img class="slide" src="images/project1_2.png" alt="Project 1 Slide 2" style="display:none;">
@@ -48,7 +48,7 @@
             <p>Designed and implemented a Delay-Locked Loop (DLL) for high-speed photonic links to enable precise clock-data recovery in massively parallel WDM systems. Contributed to a broader effort optimizing photonic interconnects for mmWave transceivers, focusing on energy-efficient signal distribution and synchronization in beamforming architectures.</p>
           </div>
           </div>
-        </div>
+        </div> -->
         <!-- PROJECT 3-->
           <div class="project-card" id="project3" style="--slide-width: 300px; --slide-height: 300px;">
             <div class="slideshow-container" id="project3-slideshow">
